--- a/.github/workflows/build-N1.yml
+++ b/.github/workflows/build-N1.yml
@@ -160,7 +160,7 @@ on:
       builder_name:
         description: "设置打包作者的名称"
         required: true
-        default: 'wukongdaily'
+        default: 'Eureka'
 
 jobs:
   build:
